# cellarAutomaton

./: .env  .gitignore  CMakeLists.txt  LoadMap.cpp  README.md  Simulation.cpp  Simulation.h  config.h  example_CMakeLists.txt  loadMap.cpp  loadMap.h  main.cpp  simulation.cpp  simulation.h  states-data.txt
header/: Button.h  LoadMap.h  Simulation.h
src/: Button.cpp  LoadMap.cpp  Simulation.cpp  main.cpp
